[package]
name = "nur-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "process"] } 
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
serde_yaml = "0.9.34"
uuid = {version = "1.17.0", features = ["v4"]}
aws-config = "1.1.1"
aws-sdk-s3 = "1.10.0"
zip = "4.0.0"
walkdir = "2.5.0"
users = "0.11.0"
