[package]
name = "nur-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "process", "tracing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }
hmac = "0.12"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
console-subscriber = "0.4.0"
dotenvy = "0.15"
serde_yaml = "0.9.34"
uuid = {version = "1.17.0", features = ["v4"]}
aws-config = "1.8.0"
aws-sdk-s3 = "1.93.0"
walkdir = "2.5.0"
postgrest = "1.6.0"
zstd = "0.13.3"
futures = "0.3.31"
